--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "memegenerator",
-    "homepage": "https://taabishshaikh2.github.io/MemeBanao",
+  "homepage": "https://taabishshaikh2.github.io/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.0.2",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
